Apply updates
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>